[package]
name = "tomo"
version = "0.1.0"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.9.1"
futures = "0.3.8"
static_assertions = "1.1.0"
thiserror = "1.0.22"

[dev-dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
